fix overflow-x scroll bug on small screens

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -38,7 +38,7 @@ body {
   font-size: 14px;
   font-weight: 200;
   background: $background-color;
-
+  overflow-x: hidden;
 }
 
 
